[package]
name = "sensors"
version = "0.2.1"
authors = ["nyantec GmbH <dev@nyantec.com>"]
license = "MirOS"
description = "A Rust-friendly interface to lm-sensors"
categories = ["api-bindings", "hardware-support"]
repository = "https://github.com/nyantec/sensors"

[dependencies]
libsensors-sys = "0.2"
libc = "0.2"
